# mlibc

./: .gitignore  meson.build
.github/: CODEOWNERS
.github/workflows/: ci.yml  rebase-build.yml
abis/popcorn/: limits.h  resource.h  signal.h  stat.h  statvfs.h
ci/: popcorn.cross-file
options/ansi/include/mlibc/: ansi-sysdeps.hpp
options/bsd/generic/: getopt.cpp
options/bsd/include/netinet/: ether.h
options/elf/generic/: startup.cpp
options/internal/include/mlibc/: internal-sysdeps.hpp  tid.hpp
options/posix/generic/: termios.cpp  unistd.cpp
options/posix/include/netinet/: if_ether.h
options/posix/include/sys/: param.h
options/rtld/generic/: main.cpp
options/rtld/include/mlibc/: rtld-sysdeps.hpp
sysdeps/popcorn/: meson.build
sysdeps/popcorn/crt-x86_64/: crt1.S
sysdeps/popcorn/generic/: entry.cpp  generic.cpp  handle.cpp  io.cpp  thread_entry.S  thread_rt.cpp
sysdeps/popcorn/include/abi-bits/: access.h  auxv.h  blkcnt_t.h  blksize_t.h  clockid_t.h  dev_t.h  errno.h  fcntl.h  fd_set.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  in.h  ino_t.h  ioctls.h  ipc.h  limits.h  mode_t.h  mqueue.h  msg.h  nlink_t.h  pid_t.h  poll.h  resource.h  rlim_t.h  sa_family_t.h  seek-whence.h  sem.h  shm.h  sig-limits.h  sigevent.h  signal.h  sigset_t.h  sigval.h  socket.h  socklen_t.h  stat.h  statvfs.h  suseconds_t.h  termios.h  (+7 more)
sysdeps/popcorn/include/mlibc/: syscall.h  sysdeps.hpp  thread-entry.hpp
sysdeps/popcorn/include/sys/: handle.h  syscall.h
